src/codegen/tests/snapshots/rusty__codegen__tests__debug_tests__global_var_byteseq_added_to_debug_info.snap
---
source: src/codegen/tests/debug_tests.rs
expression: codegen
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

@a = global i8 0, !dbg !0
@b = global i8 0, !dbg !4
@c = global i16 0, !dbg !7
@d = global i32 0, !dbg !10
@e = global i64 0, !dbg !13

!llvm.module.flags = !{!16, !17}
!llvm.dbg.cu = !{!18}

!0 = !DIGlobalVariableExpression(var: !1, expr: !DIExpression())
!1 = distinct !DIGlobalVariable(name: "a", scope: !2, file: !2, line: 3, type: !3, isLocal: false, isDefinition: true)
!2 = !DIFile(filename: "<internal>", directory: "")
!3 = !DIBasicType(name: "BOOL", size: 8, encoding: DW_ATE_boolean, flags: DIFlagPublic)
!4 = !DIGlobalVariableExpression(var: !5, expr: !DIExpression())
!5 = distinct !DIGlobalVariable(name: "b", scope: !2, file: !2, line: 4, type: !6, isLocal: false, isDefinition: true)
!6 = !DIBasicType(name: "BYTE", size: 8, encoding: DW_ATE_unsigned, flags: DIFlagPublic)
!7 = !DIGlobalVariableExpression(var: !8, expr: !DIExpression())
!8 = distinct !DIGlobalVariable(name: "c", scope: !2, file: !2, line: 5, type: !9, isLocal: false, isDefinition: true)
!9 = !DIBasicType(name: "WORD", size: 16, encoding: DW_ATE_unsigned, flags: DIFlagPublic)
!10 = !DIGlobalVariableExpression(var: !11, expr: !DIExpression())
!11 = distinct !DIGlobalVariable(name: "d", scope: !2, file: !2, line: 6, type: !12, isLocal: false, isDefinition: true)
!12 = !DIBasicType(name: "DWORD", size: 32, encoding: DW_ATE_unsigned, flags: DIFlagPublic)
!13 = !DIGlobalVariableExpression(var: !14, expr: !DIExpression())
!14 = distinct !DIGlobalVariable(name: "e", scope: !2, file: !2, line: 7, type: !15, isLocal: false, isDefinition: true)
!15 = !DIBasicType(name: "LWORD", size: 64, encoding: DW_ATE_unsigned, flags: DIFlagPublic)
!16 = !{i32 2, !"Dwarf Version", i32 5}
!17 = !{i32 2, !"Debug Info Version", i32 3}
!18 = distinct !DICompileUnit(language: DW_LANG_C, file: !2, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, globals: !19, splitDebugInlining: false, nameTableKind: None)
!19 = !{!0, !4, !7, !10, !13}
