src/codegen/tests/snapshots/rusty__codegen__tests__debug_tests__global_var_int_added_to_debug_info.snap
---
source: src/codegen/tests/debug_tests.rs
expression: codegen
---
; ModuleID = '<internal>'
source_filename = "<internal>"
target datalayout = "[filtered]"
target triple = "[filtered]"

@a = global i8 0, !dbg !0
@b = global i8 0, !dbg !4
@c = global i16 0, !dbg !7
@d = global i16 0, !dbg !10
@e = global i32 0, !dbg !13
@f = global i32 0, !dbg !16
@g = global i64 0, !dbg !19
@h = global i64 0, !dbg !22

!llvm.module.flags = !{!25, !26}
!llvm.dbg.cu = !{!27}

!0 = !DIGlobalVariableExpression(var: !1, expr: !DIExpression())
!1 = distinct !DIGlobalVariable(name: "a", scope: !2, file: !2, line: 3, type: !3, isLocal: false, isDefinition: true)
!2 = !DIFile(filename: "<internal>", directory: "")
!3 = !DIBasicType(name: "SINT", size: 8, encoding: DW_ATE_signed, flags: DIFlagPublic)
!4 = !DIGlobalVariableExpression(var: !5, expr: !DIExpression())
!5 = distinct !DIGlobalVariable(name: "b", scope: !2, file: !2, line: 4, type: !6, isLocal: false, isDefinition: true)
!6 = !DIBasicType(name: "USINT", size: 8, encoding: DW_ATE_unsigned, flags: DIFlagPublic)
!7 = !DIGlobalVariableExpression(var: !8, expr: !DIExpression())
!8 = distinct !DIGlobalVariable(name: "c", scope: !2, file: !2, line: 5, type: !9, isLocal: false, isDefinition: true)
!9 = !DIBasicType(name: "INT", size: 16, encoding: DW_ATE_signed, flags: DIFlagPublic)
!10 = !DIGlobalVariableExpression(var: !11, expr: !DIExpression())
!11 = distinct !DIGlobalVariable(name: "d", scope: !2, file: !2, line: 6, type: !12, isLocal: false, isDefinition: true)
!12 = !DIBasicType(name: "UINT", size: 16, encoding: DW_ATE_unsigned, flags: DIFlagPublic)
!13 = !DIGlobalVariableExpression(var: !14, expr: !DIExpression())
!14 = distinct !DIGlobalVariable(name: "e", scope: !2, file: !2, line: 7, type: !15, isLocal: false, isDefinition: true)
!15 = !DIBasicType(name: "DINT", size: 32, encoding: DW_ATE_signed, flags: DIFlagPublic)
!16 = !DIGlobalVariableExpression(var: !17, expr: !DIExpression())
!17 = distinct !DIGlobalVariable(name: "f", scope: !2, file: !2, line: 8, type: !18, isLocal: false, isDefinition: true)
!18 = !DIBasicType(name: "UDINT", size: 32, encoding: DW_ATE_unsigned, flags: DIFlagPublic)
!19 = !DIGlobalVariableExpression(var: !20, expr: !DIExpression())
!20 = distinct !DIGlobalVariable(name: "g", scope: !2, file: !2, line: 9, type: !21, isLocal: false, isDefinition: true)
!21 = !DIBasicType(name: "LINT", size: 64, encoding: DW_ATE_signed, flags: DIFlagPublic)
!22 = !DIGlobalVariableExpression(var: !23, expr: !DIExpression())
!23 = distinct !DIGlobalVariable(name: "h", scope: !2, file: !2, line: 10, type: !24, isLocal: false, isDefinition: true)
!24 = !DIBasicType(name: "ULINT", size: 64, encoding: DW_ATE_unsigned, flags: DIFlagPublic)
!25 = !{i32 2, !"Dwarf Version", i32 5}
!26 = !{i32 2, !"Debug Info Version", i32 3}
!27 = distinct !DICompileUnit(language: DW_LANG_Pascal83, file: !2, producer: "RuSTy Structured text Compiler", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug, globals: !28, splitDebugInlining: false, nameTableKind: None)
!28 = !{!0, !4, !7, !10, !13, !16, !19, !22}
